--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "envalid": "^7.1.1",
     "eslint-plugin-jest": "^24.4.0",
     "express": "^4.17.1",
+    "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.6",
     "pg": "^8.7.1",
