--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node ./src/server.ts",
     "test": "jest",
-    "typeorm:cli": "ts-node ./node_modules/typeorm/cli -f ./src/ormconfig.ts",
+    "typeorm": "ts-node ./node_modules/typeorm/cli -f ./src/ormconfig.ts",
     "eslint": "eslint . --ext .ts",
     "prettier": "prettier --write ."
   },
