--- a/backend/package.json
+++ b/backend/package.json
@@ -15,41 +15,36 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.4",
     "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "envalid": "^7.1.1",
-    "eslint-plugin-jest": "^24.4.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "ts-node": "^10.2.0",
-    "typeorm": "^0.2.36"
+    "typeorm": "^0.2.36",
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.12",
     "@types/jest": "^27.0.0",
-    "@types/jsonwebtoken": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-jest": "^24.4.0",
     "jest": "^27.0.6",
     "prettier": "2.3.2",
     "ts-jest": "^27.0.4",
-    "typescript": "^4.3.5"
+    "ts-node": "^10.2.0"
   }
 }
