--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,51 @@
 version: "3"
 services:
+  frontend:
+    build: ./frontend
+    container_name: frontend
+    environment:
+      - PORT=$FRONTEND_PORT
+      - REACT_APP_BACKEND_URL=$SITE_URL
+      - REACT_APP_BACKEND_PORT=$BACKEND_PORT
+    ports:
+      - $FRONTEND_PORT:80
+    links:
+      - backend
+    networks:
+      - sushiOM
+  
+  backend:
+    build: ./backend
+    container_name: backend
+    environment:
+      - PORT=$BACKEND_PORT
+      - FRONTEND_URL=$SITE_URL
+      - FRONTEND_PORT=$FRONTEND_PORT
+      - JWT_SECRET=$JWT_SECRET
+      - JWT_EXPIRATION=$JWT_EXPIRATION
+      - PGHOST=postgres
+      - PGPORT=5432
+      - PGUSER=$PGUSER
+      - PGPASSWORD=$PGPASSWORD
+      - PGDATABASE=$PGDATABASE
+    ports:
+      - $BACKEND_PORT:$BACKEND_PORT
+    depends_on:
+      - "postgres"
+    networks:
+      - sushiOM
+    
   postgres:
     container_name: postgres
     image: postgres:latest
-    ports:
-    - "5432:5432"
     volumes:
     - /data/postgres:/data/postgres
-    env_file:
-    - docker.env
+    environment:
+      - POSTGRES_USER=$PGUSER
+      - POSTGRES_PASSWORD=$PGPASSWORD
+      - POSTGRES_DB=$PGDATABASE
     networks:
-    - postgres
+    - sushiOM
  
   pgadmin:
     links:
@@ -18,14 +53,18 @@ services:
     container_name: pgadmin
     image: dpage/pgadmin4
     ports:
-    - "8080:80"
+    - $PGADMIN_PORT:80
     volumes:
     - /data/pgadmin:/root/.pgadmin
-    env_file:
-    - docker.env
+    environment:
+      - POSTGRES_USER=$PGUSER
+      - POSTGRES_PASSWORD=$PGPASSWORD
+      - POSTGRES_DB=$PGDATABASE
+      - PGADMIN_DEFAULT_EMAIL=$PGADMIN_DEFAULT_EMAIL
+      - PGADMIN_DEFAULT_PASSWORD=$PGADMIN_DEFAULT_PASSWORD
     networks:
-    - postgres
+    - sushiOM
  
 networks:
-  postgres:
+  sushiOM:
     driver: bridge
