--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dockerStart": "npm run initDB && npm run waitDB npm run prod",
     "initDB": "./wait-for-it.sh ${PGHOST}:${PGPORT} --strict -- npm run typeorm schema:sync",
     "start": "./wait-for-it.sh ${PGHOST}:${PGPORT} --strict -- npm run dev",
+    "waitDB": "./wait-for-it.sh ${PGHOST}:${PGPORT} --strict -- ",
     "dev": "ts-node ./src/server.ts",
+    "prod": "node ./dist/server.js",
     "test": "jest",
     "typeorm": "ts-node ./node_modules/typeorm/cli -f ./src/ormconfig.ts",
     "eslint": "eslint . --ext .ts",
@@ -30,6 +33,7 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.2.0",
     "typeorm": "^0.2.36",
     "typescript": "^4.3.5"
   },
@@ -44,7 +48,6 @@
     "eslint-plugin-jest": "^24.4.0",
     "jest": "^27.0.6",
     "prettier": "2.3.2",
-    "ts-jest": "^27.0.4",
-    "ts-node": "^10.2.0"
+    "ts-jest": "^27.0.4"
   }
 }
