[backend] Added the removal of the expired groups

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
       - FRONTEND_PORT=$FRONTEND_PORT
       - JWT_SECRET=$JWT_SECRET
       - JWT_EXPIRATION=$JWT_EXPIRATION
+      - DELETE_GROUPS_INTERVAL=$DELETE_GROUPS_INTERVAL
       - PGHOST=postgres
       - PGPORT=5432
       - PGUSER=$PGUSER
